[project]
name = "prototxt-to-onnx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mmdnn>=0.3.1",
    "onnx>=1.21.0",
    "onnx2torch>=1.5.15",
    "onnxscript>=0.7.0",
    "streamlit>=1.58.0",
    "tf2onnx>=1.17.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]
